--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,14 @@ body{
   min-height: 100vh;
 }
 
+header{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 30px 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  z-index: 1000;
+}
