--- a/styles.css
+++ b/styles.css
@@ -55,3 +55,10 @@ header{
   background: #112434;
   color: #fff;
 }
+
+.parallax{
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
