--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 body{
-  overflow-x: hidden;
+  /* overflow-x: hidden */;
   background: #fff;
   min-height: 100vh;
 }
@@ -61,4 +61,5 @@ header{
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 100vh;
 }
