--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,15 @@ header{
   padding: 100px;
   background: #112434;
 }
+
+.sec h2{
+  font-size: 3em;
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.sec p{
+  font-size: 1em;
+  color: #fff;
+  font-weight: 300;
+}
